# socrates

./: .gitignore  Cargo.toml  README.md
dms/: Cargo.toml
dms/src/: aggregate.rs  commands.rs  dms_api.rs  entities.rs  main.rs  persistent_objects.rs  queries.rs
phonebook/sink/: 1_CreateCategory.txt  2_CreateCategory.txt  3_CreateCategory.txt  4_CreateCategory.txt  5_CreateCategory.txt  6_CreateCategory.txt  7_CreateContact.txt
phonebook/src/: aggregate.rs  entities.rs  main.rs  persistent_objects.rs  phonebook_api.rs
socrates/: Cargo.toml
socrates/src/: api.rs  error.rs  event.rs  file_storage.rs  file_system_storage.rs  json.rs  lib.rs  null_storage.rs  sink.rs  storage.rs
